--- a/intex.html
+++ b/intex.html
@@ -6,22 +6,75 @@
   <title>Xidmətim.az — Demo Landing</title>
   <style>
     :root{
-      --bg:#ffffff; --muted:#6b7280; --accent:#0ea5a4; --accent-dark:#0b8c88; --gold:#d4af37;
-      --card:#f8fafc; --radius:14px; --shadow:0 6px 18px rgba(2,6,23,0.08);
+      --bg:#ffffff; 
+      --text:#0f172a;      /* əsas text rəngi */
+      --muted:#6b7280;     /* açıq rejimdə boz */
+      --accent:#0ea5a4; 
+      --accent-dark:#0b8c88; 
+      --gold:#d4af37;
+      --card:#f8fafc; 
+      --radius:14px; 
+      --shadow:0 6px 18px rgba(2,6,23,0.08);
       font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
     }
+    
+    body.dark .mock-screen {
+  background: #1e293b; /* tünd göy-boz rəng */
+  border: 1px solid #334155; /* daha tünd sərhəd */
+  color: #f8fafc; /* yazılar ağ olsun */
+}
+
+body.dark .mock-screen input {
+  background: #0f172a;
+  border: 1px solid #334155;
+  color: #f8fafc;
+}
+
+body.dark .mock-screen div {
+  color: #f8fafc; /* içindəki yazılar oxunsun */
+}
+
+    body{
+      margin:0;
+      background:linear-gradient(180deg,#f7f9fb 0%, #ffffff 100%);
+      color:var(--text);
+      transition: all 0.3s ease;
+    }
+    body.dark{
+      --bg:#0f172a;        /* fon rəngi */
+      --text:#f8fafc;      /* əsas yazılar */
+      --muted:#cbd5e1;     /* muted yazılar üçün açıq boz */
+      --card:#1e293b;      /* kartların fonu */
+      background:var(--bg);
+      color:var(--text);
+    }
     *{box-sizing:border-box}
-    body{margin:0;background:linear-gradient(180deg,#f7f9fb 0%, #ffffff 100%);color:#0f172a}
     .container{max-width:980px;margin:28px auto;padding:0 18px}
 
     /* Header */
     header{display:flex;align-items:center;justify-content:space-between;padding:18px 0}
     .brand{display:flex;align-items:center;gap:12px}
-    .logo{width:56px;height:56px;border-radius:12px;background:linear-gradient(135deg,var(--accent),var(--accent-dark));display:flex;align-items:center;justify-content:center;color:white;font-weight:700;font-size:20px;box-shadow:var(--shadow)}
+    .logo{
+      width:56px;
+      height:56px;
+      border-radius:12px;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      box-shadow:var(--shadow);
+      background:linear-gradient(135deg,var(--accent),var(--accent-dark));
+    }
+    .logo img{
+      width:70%;
+      height:70%;
+      object-fit:contain;
+      border-radius:12px;
+    }
     .brand h1{margin:0;font-size:18px}
     .nav{display:flex;gap:12px;align-items:center}
     .btn{background:var(--accent);color:white;padding:10px 14px;border-radius:10px;border:none;cursor:pointer;font-weight:600}
     .btn.ghost{background:transparent;color:var(--accent);border:1px solid rgba(14,165,164,0.12)}
+    .btn-toggle{margin-left:10px;}
 
     /* Hero */
     .hero{display:grid;grid-template-columns:1fr 380px;gap:22px;align-items:center;margin-top:18px}
@@ -42,13 +95,13 @@
 
     /* service cards */
     .services{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;margin-top:22px}
-    .card{background:white;border-radius:12px;padding:12px;box-shadow:var(--shadow);display:flex;gap:12px;align-items:center}
+    .card{background:var(--card);border-radius:12px;padding:12px;box-shadow:var(--shadow);display:flex;gap:12px;align-items:center}
     .card img{width:68px;height:68px;border-radius:10px;object-fit:cover}
     .card .meta{flex:1}
     .meta h4{margin:0 0 6px}
     .meta p{margin:0;color:var(--muted);font-size:13px}
     .meta .row{display:flex;gap:8px;align-items:center;margin-top:8px}
-    .price{font-weight:700;color:#0f172a}
+    .price{font-weight:700;color:var(--text)}
 
     /* footer */
     footer{margin-top:30px;padding:14px 0;border-top:1px solid #f0f4f5;color:var(--muted);display:flex;justify-content:space-between}
@@ -63,19 +116,26 @@
 
     /* Modal */
     .modal-back{position:fixed;inset:0;background:rgba(2,6,23,0.45);display:none;align-items:center;justify-content:center;padding:16px}
-    .modal{background:white;padding:20px;border-radius:12px;max-width:420px;width:100%;box-shadow:0 10px 30px rgba(2,6,23,0.25)}
+    .modal{background:var(--card);padding:20px;border-radius:12px;max-width:420px;width:100%;box-shadow:0 10px 30px rgba(2,6,23,0.25)}
     .modal h3{margin:0 0 12px}
     .field{margin-bottom:10px}
     .field input{width:100%;padding:11px;border-radius:8px;border:1px solid #e6eef0}
     .small{font-size:13px;color:var(--muted)}
     .badge{background:linear-gradient(90deg,var(--accent),var(--accent-dark));color:white;padding:6px 10px;border-radius:999px;font-weight:700}
+
+    /* düzəlişlər muted üçün */
+    p, .small, .meta p, .meta span, footer {
+      color:var(--muted);
+    }
   </style>
 </head>
 <body>
   <div class="container">
     <header>
       <div class="brand">
-        <div class="logo">X</div>
+        <div class="logo">
+          <img src="https://i.postimg.cc/TPb5Yxx7/file-00000000fe0061f4885624bf1ab5f132.png" alt="Xidmətim.az" />
+        </div>
         <div>
           <h1>Xidmətim.az</h1>
           <div class="small">Xidmət bir toxunuş uzağında</div>
@@ -84,6 +144,7 @@
       <div class="nav">
         <button class="btn ghost" id="demo-login">Giriş et</button>
         <button class="btn" id="book-now">Sifariş et</button>
+        <button class="btn btn-toggle" id="toggleDark">🌙</button>
       </div>
     </header>
 
@@ -91,7 +152,7 @@
       <section class="hero">
         <div>
           <h2>Ev xidmətlərini daha asan sifariş et</h2>
-          <p>Soyuducu, paltaryuyan, kondisoner, təmizlik və digər xidmətlər — bir app-da. Etibarlı ustalar, şəffaf qiymətlər və sürətli xidmət.</p>
+          <p>Soyuducu, paltaryuyan, kondisioner, təmizlik və digər xidmətlər — bir app-da. Etibarlı ustalar, şəffaf qiymətlər və sürətli xidmət.</p>
 
           <div class="search">
             <input id="searchInput" placeholder="Məsələn: Soyuducu ustası" />
@@ -108,45 +169,43 @@
 
           <div class="services">
             <div class="card">
-              <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?q=80&w=400&auto=format&fit=crop&crop=faces&ixlib=rb-4.0.3&s=placeholder" alt="" />
+              <img src="https://tezbazar.az/uploads/news/product_9326832366960625.jpg" alt="" />
               <div class="meta">
                 <h4>Rəşad Usta <span style="font-size:13px;color:var(--muted)">• ⭐ 4.9</span></h4>
                 <p class="small">Soyuducu təmiri • 15-30 dəq</p>
                 <div class="row">
-                  <div class="price">30-60 AZN</div>
+                  <div class="price">10-15 AZN</div>
                   <div class="badge">Tez</div>
                 </div>
               </div>
             </div>
 
             <div class="card">
-              <img src="https://images.unsplash.com/photo-1524758631624-e2822e304c36?q=80&w=400&auto=format&fit=crop&crop=faces&ixlib=rb-4.0.3&s=placeholder" alt="" />
+              <img src="https://st5.depositphotos.com/76785014/66493/i/950/depositphotos_664932152-stock-photo-happy-woman-cleaning-house-housekeeping.jpg" alt="" />
               <div class="meta">
-                <h4>Aysel Servis <span style="font-size:13px;color:var(--muted)">• ⭐ 4.8</span></h4>
-                <p class="small">Kondisioner quraşdırma • 30-45 dəq</p>
+                <h4>Aysel Xanim <span style="font-size:13px;color:var(--muted)">• ⭐ 4.8</span></h4>
+                <p class="small">Temizlik xidmeti • 30-45 dəq</p>
                 <div class="row">
-                  <div class="price">45-100 AZN</div>
+                  <div class="price">50-60 AZN</div>
                 </div>
               </div>
             </div>
 
             <div class="card">
-              <img src="https://images.unsplash.com/photo-1551836022-d5d88e9218df?q=80&w=400&auto=format&fit=crop&crop=faces&ixlib=rb-4.0.3&s=placeholder" alt="" />
+              <img src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Mehmet_Usta.jpg" alt="" />
               <div class="meta">
                 <h4>Nicat Usta <span style="font-size:13px;color:var(--muted)">• ⭐ 4.7</span></h4>
                 <p class="small">Elektrik işləri • 10-20 dəq</p>
                 <div class="row">
-                  <div class="price">25-50 AZN</div>
+                  <div class="price">5-15 AZN</div>
                 </div>
               </div>
             </div>
-
           </div>
         </div>
 
         <div class="phone-mock">
           <div class="mock-screen" id="mockScreen">
-            <!-- Simple mock: top, categories, list, CTA -->
             <div style="padding:14px">
               <div style="display:flex;align-items:center;justify-content:space-between">
                 <strong>Xidmətim</strong>
@@ -161,23 +220,21 @@
                 <div style="background:#f8f6ff;padding:8px;border-radius:10px">🔌 Elektrikçi</div>
               </div>
 
-              <div style="margin-top:18px;background:white;padding:8px;border-radius:10px;border:1px solid #eef6f7">
+              <div style="margin-top:18px;background:var(--card);padding:8px;border-radius:10px;border:1px solid #eef6f7">
                 <div style="display:flex;align-items:center;gap:8px">
-                  <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?q=80&w=80&auto=format&fit=crop&crop=faces&ixlib=rb-4.0.3&s=placeholder" style="width:54px;height:54px;border-radius:8px;object-fit:cover" />
+                  <img src="https://tezbazar.az/uploads/news/product_9326832366960625.jpg" style="width:54px;height:54px;border-radius:8px;object-fit:cover" />
                   <div style="flex:1">
                     <div style="font-weight:700">Rəşad Usta</div>
-                    <div style="font-size:12px;color:var(--muted)">15-25 dəq • 30-60 AZN</div>
+                    <div style="font-size:12px;color:var(--muted)">15-25 dəq • 10-15 AZN</div>
                   </div>
                   <button style="background:var(--accent);color:white;padding:8px 10px;border-radius:10px;border:none">Çağır</button>
                 </div>
               </div>
-
             </div>
           </div>
         </div>
 
       </section>
-
     </main>
 
     <footer>
@@ -249,5 +306,18 @@
       bookBack.style.display='flex'
     }))
   </script>
+    <script>
+    const toggleBtn = document.getElementById('toggleDark');
+    toggleBtn.addEventListener('click', ()=>{
+      document.body.classList.toggle('dark');
+      // Buton simvolunu dəyişmək
+      if(document.body.classList.contains('dark')){
+        toggleBtn.textContent = '☀️';
+      } else {
+        toggleBtn.textContent = '🌙';
+      }
+    });
+  </script>
+  
 </body>
 </html>
